[package]
name = "advanced-db-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.16.0"
rayon = "1.10.0"
ring = "0.17.8"
secp256k1 = { version = "0.29.0", features = ["recovery", "lowmemory", "serde", "std", "rand", "rand-std"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
sha256 = "1.5.0"

