[package]
name = "advanced-db-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
axum-server = "0.6.0"
dotenvy = "0.15.7"
num_cpus = "1.16.0"
rayon = "1.10.0"
ring = "0.17.8"
secp256k1 = { version = "0.29.0", features = ["recovery", "lowmemory", "serde", "std", "rand", "rand-std"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
sha256 = "1.5.0"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

